# boiler-space

./: README.md
machine-learning/: README.md  compose.yml  pyproject.toml  start_project.sh
machine-learning/config/: config.env  minio.env  postgres.env
machine-learning/notebooks/: experiment.ipynb
