[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.97",
    "duckdb>=1.1.3",
    "dynaconf>=3.2.6",
    "ipykernel>=6.29.5",
    "mlflow>=2.19.0",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
]
